Přidane ukládání do souboru

--- a/Platforms/Android/AndroidManifest.xml
+++ b/Platforms/Android/AndroidManifest.xml
@@ -3,4 +3,7 @@
 	<application android:allowBackup="false" android:icon="@mipmap/appicon" android:roundIcon="@mipmap/appicon_round" android:supportsRtl="true"></application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
+  <!-- New Permission-->
+  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
 </manifest>
