--- a/IMP_reseni.csproj
+++ b/IMP_reseni.csproj
@@ -50,6 +50,8 @@
 
 		<!-- Raw Assets (also remove the "Resources\Raw" prefix) -->
 		<MauiAsset Include="Resources\Raw\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
+    <!-- Test -->
+   
 	</ItemGroup>
 
 	<ItemGroup>
