--- a/IMP_reseni.csproj
+++ b/IMP_reseni.csproj
@@ -80,6 +80,9 @@
 	  <MauiXaml Update="Views\Accounting.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\AddItemToBasket.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\AdminPanel.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
