--- a/IMP_reseni.csproj
+++ b/IMP_reseni.csproj
@@ -64,6 +64,7 @@
 	<ItemGroup>
 	  <PackageReference Include="CommunityToolkit.Maui" Version="2.0.0" />
 	  <PackageReference Include="InTheHand.Net.Bluetooth" Version="4.0.33.1" />
+	  <PackageReference Include="MegaApiClient" Version="1.10.3" />
 	  <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
 	</ItemGroup>
 
