--- a/Platforms/Android/AndroidManifest.xml
+++ b/Platforms/Android/AndroidManifest.xml
@@ -6,8 +6,7 @@
 	<uses-permission android:name="android.permission.INTERNET" />
 	<!-- New Permission-->
   <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-  
-	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.BLUETOOTH" />
 	<uses-permission android:name="android.permission.BLUETOOTH_PRIVILEGED" />
 	<uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
