--- a/IMP_reseni.csproj
+++ b/IMP_reseni.csproj
@@ -83,6 +83,9 @@
 	  <MauiXaml Update="Controls\OptionView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Controls\SpinnerPopup.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\Accounting.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
